<resources>
    <string name="app_name">CleanWeather</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search city…</string>
    <string name="search_hint">Type city…</string>
    <string name="msg_exit">Press again to exit…</string>
    <string name="preferences">Preferences</string>
    <string name="settings_title">Weather options</string>
    <string name="switch_temp_title">Set units</string>
    <string name="switch_temp_summary">Celsius and Meter/Fahrenheit and Mile</string>
    <string name="pressure_unit">mb</string>
    <string name="procentage">%</string>
    <string name="setting_day_list_summary">Set from 1 to 7 days forecast</string>
    <string name="setting_day_list_title">Select amount of days</string>
    <string name="get_weather_here">Get weather here</string>
    <string name="error_message">Something went wrong! Check internet connection</string>
    <string name="offline_message">You are offline! Loaded latest forecast</string>
    <string name="forecast_sentence_start">Forecast for </string>
    <string name="chart_details">Chart details</string>
    <string name="temperature">Temperature</string>
    <string name="rain_chance">Rain Drop</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="page_one">Today</string>
    <string name="page_two">Tomorrow</string>
    <string name="page_tree_start">Next</string>
    <string name="page_tree_end">days</string>
    <string name="add_city">Add city…</string>
    <string name="signature">by Adam Kamiński</string>
    <string name="forecast_sentence_end">days:</string>
    <string name="next_days">Next days:</string>
    <string name="next_hours">Next hours:</string>
    <string name="details">Details:</string>
</resources>
