<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/nav_header_main"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:stretchColumns="1">

                <TableRow>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_menu_manage"/>

                    <TextView
                        android:id="@+id/app_settings"
                        style="@style/textSmall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"

                        android:gravity="center_vertical"
                        android:text="@string/preferences"/>
                </TableRow>


                <TableRow>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_placeholder"/>

                    <TextView
                        android:id="@+id/find_my_location"
                        style="@style/textSmall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/get_weather_here"/>
                </TableRow>

                <TableRow>

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_add"/>

                    <TextView
                        android:id="@+id/add_city"
                        style="@style/textSmall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/add_city"/>
                </TableRow>


            </TableLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/navigation_drawer_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:context=".view.activities.HomeActivity"/>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

