<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".view.activities.HomeActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/current_swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/current_fragment_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/current_ic_clock"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_wall_clock"/>

                    <TextView
                        android:id="@+id/current_text_time"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="12:20"/>

                    <TextView
                        android:id="@+id/current_text_date"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="May 5"
                        android:textAlignment="viewEnd"/>

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/current_ic_date"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_calendar"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/current_text_city"
                        style="@style/textBigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:text="Nowy York"/>


                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/current_ic_weather"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        app:srcCompat="@drawable/ic_moon"/>
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_black"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:stretchColumns="1">

                    <TextView
                        android:id="@+id/current_text_more_details"
                        style="@style/textNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/chart_details"/>

                    <TableRow>

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_temp"/>


                        <TextView
                            android:id="@+id/current_text_temp"
                            style="@style/textNormal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/temperature"/>
                    </TableRow>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/current_chart_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"/>

                    <TableRow>

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_rain"/>


                        <TextView
                            android:id="@+id/current_text_rain_chance"
                            style="@style/textNormal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/rain_chance"/>
                    </TableRow>

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/current_chart_rain_chance"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"/>

                    <TableRow>

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            app:srcCompat="@drawable/ic_wind"/>

                        <TextView
                            android:id="@+id/current_text_wind"
                            style="@style/textNormal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/wind_speed"/>
                    </TableRow>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/current_chart_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"/>

                    <TableRow>

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            app:srcCompat="@drawable/ic_pressure"/>

                        <TextView
                            android:id="@+id/current_text_pressure"
                            style="@style/textNormal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/pressure"/>
                    </TableRow>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/current_chart_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"/>

                    <TableRow>

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            app:srcCompat="@drawable/ic_drop"/>

                        <TextView
                            android:id="@+id/current_text_humidity"
                            style="@style/textNormal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/humidity"/>
                    </TableRow>

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/current_chart_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"/>

                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
